# atrium

./: Dockerfile  Dockerfile.cc  README.md  versions.env
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: build.yml  cc-image.yml  nosetcap-image.yml  security-audit.yml
backend/: .gitignore  Cargo.toml  atrium.yaml  build.rs  deny.toml
backend/.cargo/: config.toml
backend/src/: apps.rs  appstate.rs  configuration.rs  dir_server.rs  errors.rs  extract.rs  extractors.rs  headers.rs  jail.rs  lib.rs  logger.rs  main.rs  middlewares.rs  mocks.rs  oauth2.rs  onlyoffice.rs  self_signed.rs  server.rs  sysinfo.rs  users.rs  utils.rs  web.rs
backend/src/apps/: mod.rs  proxy.rs
backend/src/auth/: cookie_user.rs  middlewares.rs  mod.rs  share.rs  user.rs
backend/src/davs/: crypto.rs  dav_file.rs  error.rs  headers.rs  mod.rs  model.rs  webdav_server.rs
backend/src/users/: auth.rs  mod.rs  model.rs  share.rs  xsrf.rs
backend/tests/backend/: admin.rs  apps.rs  auth.rs  davs.rs  davs_litmus.rs  helpers.rs  main.rs  oauth2.rs  user.rs
backend/tests/backend/apps/: mod.rs  proxy.rs  remote_user.rs  single_proxy.rs  static_app.rs
backend/tests/data/: index.html  lorem.txt
backend/web/: index.html
backend/web/oauth2/: oauth2.html  oauth2.js
backend/web/onlyoffice/: index.tmpl  onlyoffice.js
frontend/: .metadata  README.md  pubspec.yaml
frontend/android/: settings.gradle
frontend/android/app/: build.gradle  build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/fr/ninico/atrium/: MainActivity.kt
frontend/android/app/src/main/res/values/: colors.xml
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/lib/: globals.dart  i18n.dart  main.dart  utils.dart
frontend/lib/components/: apps_list.dart  async_button.dart  create_edit_app.dart  create_edit_dav.dart  create_edit_user.dart  davs_list.dart  delete_dialog.dart  explorer.dart  icon_picker.dart  icons.dart  iframe_webview.dart  image_viewer.dart  login_dialog.dart  media_player.dart  pdf_viewer.dart  rename_dialog.dart  share_dialog.dart  sized_items_grid.dart  system_info.dart  text_editor.dart  uploads.dart  user_dialog.dart  users_list.dart  webview.dart  welcome_screen.dart  whoami_popup.dart
frontend/lib/models/: api_provider.dart  app.dart  dav.dart  explore_config.dart  pathitem.dart  preferences.dart  share_response.dart  sysinfo.dart  user.dart
frontend/lib/platform/: mobile.dart  web.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  init.js  manifest.json  pdf.js
scripts/: .gitignore  access_map.sh  openshift-example.yaml
scripts/benchmark/: atrium.yaml  benchmark.sh  mem_usage.sh  nginx_default.conf  plot_memory_usage.gp
scripts/benchmark/actix_backend/: Cargo.toml
scripts/benchmark/actix_backend/src/: main.rs
scripts/deploy/: up.sh  watch_updates.sh
scripts/docker/: down.sh  up.sh
scripts/fail2ban/: docker-compose.yml  down.sh  jail.local  logs.sh  reload.sh  up.sh
scripts/fail2ban/atrium-config/filter.d/: atrium-denied.conf
scripts/fail2ban/atrium-config/jail.d/: atrium.local
scripts/mock_keycloak/: export-mdl-realm.sh  mdl.json  up.sh
scripts/mock_onlyoffice/: up.sh
scripts/systemd/: install_atrium.sh
