[package]
name = "atrium"
version = "1.5.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "atrium"

[dependencies]
anyhow = { default-features = false, version = "1.0.89" }
argon2 = { features = ["alloc", "password-hash"], default-features = false, version = "0.5.3" }
async_zip = { features = ["deflate", "tokio"], default-features = false, version = "0.0.17" }
async-stream = "0.3.6"
async-walkdir = "2.0.0"
axum = { version = "0.7.7", features = ["http2", "json", "query", "tokio"], default-features = false }
axum-extra = { version = "0.9.4", features = ["cookie-private", "typed-header"], default-features = false }
axum-server = "0.7.1"
base64ct = { version = "1.6.0", features = ["alloc"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream"], default-features = false }
chrono = { default-features = false, version = "0.4.38" }
filetime = "0.2.25"
futures = { default-features = false, version = "0.3.31" }
futures-util = { default-features = false, version = "0.3.31" }
headers = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", default-features = false }
hyper-util = { version = "0.1.9", features = ["client-legacy", "http1", "tokio"], default-features = false }
hyper-rustls = { version = "0.27.3", features = ["http1", "http2", "ring", "tls12", "webpki-tokio"], default-features = false }
hyper-hickory = { version = "0.7.0", default-features = false, features = ["system-config"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
maxminddb = "0.24.0"
mime_guess = { default-features = false, version = "2.0.5" }
# TEMPORARY
oauth2 = { version = "5.0.0-rc.1", default-features = false }
percent-encoding = { default-features = false, version = "2.3.1" }
quick-xml = "0.36.2"
rand = { default-features = false, version = "0.8.5" }
rustls = { default-features = false, version = "0.23.14", features = ["ring"] }
rustls-pki-types = { version = "1.9.0" }
rustls-acme = { version = "0.11.1", features = ["axum", "ring"], default-features = false }
serde = { version = "1.0.210", default-features = false }
serde_json = { default-features = false, version = "1.0.128" }
serde_yml = "0.0.12"
sha2 = { default-features = false, version = "0.10.8" }
sysinfo = { default-features = false, version = "0.32.0", features = ["disk", "system"] }
time = { default-features = false, version = "0.3.36" }
tokio = { version = "1.40.0", features = ["full"], default-features = false }
tokio-stream = { version = "0.1.16", default-features = false }
tokio-util = { version = "0.7.12", default-features = false }
tower = { default-features = false, version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs"], default-features = false }
tower-service = "0.3.3"
tracing = { default-features = false, version = "0.1.40" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "local-time"], default-features = false }
trim-in-place = "0.1.7"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["fast-rng", "v4"], default-features = false }

[dev-dependencies]
async-tungstenite = { version = "0.28.0", features = ["tokio-runtime"] }
reqwest = { version = "0.12.8", default-features = false, features = ["cookies", "json", "rustls-tls", "stream"] }
tungstenite = "0.24.0"

[profile.release_optimized]
inherits = "release"
strip = true
lto = true
codegen-units = 1
panic = "abort"
