[package]
name = "atrium"
version = "1.5.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "atrium"

[dependencies]
anyhow = { default-features = false, version = "1.0.93" }
argon2 = { features = ["alloc", "password-hash"], default-features = false, version = "0.5.3" }
async_zip = { features = ["deflate", "tokio"], default-features = false, version = "0.0.17" }
async-stream = "0.3.6"
async-walkdir = "2.0.0"
axum = { version = "0.7.9", features = ["http2", "json", "query", "tokio"], default-features = false }
axum-extra = { version = "0.9.6", features = ["cookie-private", "typed-header"], default-features = false }
axum-server = "0.7.1"
base64ct = { version = "1.6.0", features = ["alloc"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream"], default-features = false }
chrono = { default-features = false, version = "0.4.38" }
filetime = "0.2.25"
futures = { default-features = false, version = "0.3.31" }
futures-util = { default-features = false, version = "0.3.31" }
headers = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", default-features = false }
hyper-util = { version = "0.1.10", features = ["client-legacy", "http1", "tokio"], default-features = false }
hyper-rustls = { version = "0.27.3", features = ["http1", "http2", "ring", "tls12", "webpki-tokio"], default-features = false }
hyper-hickory = { version = "0.7.0", default-features = false, features = ["system-config"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
maxminddb = "0.24.0"
mime_guess = { default-features = false, version = "2.0.5" }
# TEMPORARY
oauth2 = { version = "5.0.0-rc.1", default-features = false }
percent-encoding = { default-features = false, version = "2.3.1" }
quick-xml = "0.37.1"
rand = { default-features = false, version = "0.8.5" }
rcgen = { version = "0.13.1", default-features = false, optional = true }
rustls = { default-features = false, version = "0.23.18", features = ["ring"] }
rustls-pki-types = { version = "1.10.0" }
rustls-acme = { version = "0.12.1", features = ["axum", "ring"], default-features = false }
serde = { version = "1.0.215", default-features = false }
serde_json = { default-features = false, version = "1.0.133" }
serde_yml = "0.0.12"
sha2 = { default-features = false, version = "0.10.8" }
sysinfo = { default-features = false, version = "0.32.0", features = ["disk", "system"] }
time = { default-features = false, version = "0.3.36" }
tokio = { version = "1.41.1", features = ["full"], default-features = false }
tokio-stream = { version = "0.1.16", default-features = false }
tokio-util = { version = "0.7.12", default-features = false }
tower = { default-features = false, version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"], default-features = false }
tower-service = "0.3.3"
tracing = { default-features = false, version = "0.1.40" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "local-time"], default-features = false }
trim-in-place = "0.1.7"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["fast-rng", "v4"], default-features = false }

[features]
default = ["self_signed"]
self_signed = ["dep:rcgen"]

[dev-dependencies]
async-tungstenite = { version = "0.28.0", features = ["tokio-runtime"] }
reqwest = { version = "0.12.9", default-features = false, features = ["cookies", "json", "rustls-tls", "stream"] }
tungstenite = "0.24.0"

[profile.release_optimized]
inherits = "release"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
all = { level = "warn", priority = -1 }
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
indexing_slicing = "allow"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
mem_forget = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_continue = "warn"
needless_for_each = "warn"
negative_feature_names = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_self = "warn"
unwrap_used = "allow"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
